Implementado a inserção de alguns cadastros e desenvolvimento da persistência de Pets

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1303,6 +1303,13 @@ main {
     box-shadow: 0 1px 0 0 #000;
 }
 
+/* disabled input */
+
+input:not([type]):disabled, input:not([type])[readonly="readonly"], input[type=text]:not(.browser-default):disabled, input[type=text]:not(.browser-default)[readonly="readonly"], input[type=password]:not(.browser-default):disabled, input[type=password]:not(.browser-default)[readonly="readonly"], input[type=email]:not(.browser-default):disabled, input[type=email]:not(.browser-default)[readonly="readonly"], input[type=url]:not(.browser-default):disabled, input[type=url]:not(.browser-default)[readonly="readonly"], input[type=time]:not(.browser-default):disabled, input[type=time]:not(.browser-default)[readonly="readonly"], input[type=date]:not(.browser-default):disabled, input[type=date]:not(.browser-default)[readonly="readonly"], input[type=datetime]:not(.browser-default):disabled, input[type=datetime]:not(.browser-default)[readonly="readonly"], input[type=datetime-local]:not(.browser-default):disabled, input[type=datetime-local]:not(.browser-default)[readonly="readonly"], input[type=tel]:not(.browser-default):disabled, input[type=tel]:not(.browser-default)[readonly="readonly"], input[type=number]:not(.browser-default):disabled, input[type=number]:not(.browser-default)[readonly="readonly"], input[type=search]:not(.browser-default):disabled, input[type=search]:not(.browser-default)[readonly="readonly"], textarea.materialize-textarea:disabled, textarea.materialize-textarea[readonly="readonly"] {
+    /* color: rgba(0, 0, 0, 0.42); */
+    border-bottom: 1px dotted rgba(255, 255, 255, 0.42);
+}
+
 /* icon prefix focus color */
 
 .input-field .prefix.active {
@@ -1652,6 +1659,7 @@ table.table-borderless tr{
     display:block;
     width: 90vw;
     height: 100vh;
+    min-height: 85%;
     left: 5%;
     right: 10%;
 }
@@ -1806,3 +1814,7 @@ table.table-borderless tr{
 .input-field .prefix ~ input, .input-field .prefix ~ textarea, .input-field .prefix ~ label, .input-field .prefix ~ .validate ~ label, .input-field .prefix ~ .autocomplete-content{
     margin-left: 1rem !important;
 }
+
+.input-field .prefix.right{
+    right: 0;
+  }
