--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1818,3 +1818,16 @@ table.table-borderless tr{
 .input-field .prefix.right{
     right: 0;
   }
+
+/* Esconder setas input tipo number */
+/* Chrome, Safari, Edge, Opera */
+input.no-arrows::-webkit-outer-spin-button ,
+input.no-arrows::-webkit-inner-spin-button {
+  -webkit-appearance: none !important;
+  margin: 0 !important;
+}
+
+/* Firefox */
+input[type=number].no-arrows {
+  -moz-appearance: textfield !important;
+}
