Texto de observação de agendamento está ajustável com a tabela

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1973,3 +1973,9 @@ table.table-overflow-pesquisa tbody {
 .data-error {
     color: #F44336 !important;
 }
+
+.text-truncate {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
